Bug 473060 - On X11, compositing in Plasma is semi-broken on login until plasmashell is restarted
Summary: On X11, compositing in Plasma is semi-broken on login until plasmashell is re...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-08-05 23:25 UTC by guimarcalsilva
Modified: 2023-10-05 11:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Additional gray border on applet body (35.47 KB, image/png)
2023-08-05 23:25 UTC, guimarcalsilva
Details
Log from broken x11 session (471.29 KB, text/plain)
2023-08-07 23:33 UTC, guimarcalsilva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description guimarcalsilva 2023-08-05 23:25:48 UTC
Created attachment 160771 [details]
Additional gray border on applet body

SUMMARY
I noticed Plasma 6 applets have an additional (maybe misplaced) 1px border on the body of the applets (excl. header). Check the attached screenshot for more info and pay attention to the intersection between the header and the body of the applet compared to Plasma 5 on the same image.

SOFTWARE/OS VERSIONS
Qt Version: 6.6.0
Frameworks Version: 5.240.0
Operating System: Linux 6.2.0-26-generic x86_64
Windowing System: X11
Distribution: KDE neon Unstable Edition
Comment 1 Nate Graham 2023-08-07 21:07:09 UTC
I suspect it's fine on Wayland for yo (as it is for me). Can you check? If it is, then it's the same fundamental issue as Bug 422559.
Comment 2 guimarcalsilva 2023-08-07 21:45:58 UTC
(In reply to Nate Graham from comment #1)
> I suspect it's fine on Wayland for yo (as it is for me). Can you check? If
> it is, then it's the same fundamental issue as Bug 422559.

I noticed something very interesting. It appears that Plasma first logs-in in a semi-broken state, where there's no transparency on panels, the corner radius of applets are broken ( Bug 473059 I reported) and there's that 1px line on applets. Compositing is enabled in that state because if I press Shift+ALT+F12 the shadows disappear. However, all of those bugs disappear if I run "plasmashell --replace" in Krunner.

I'll try X11 and Wayland on a live session on real hardware shortly (or at least I'll try, Neon defaults to X, and logging out logs me in again automatically, so I can't select Wayland) because Wayland is broken on VMs. I'll post again if I find something interesting or if I can reproduce that same "semi-broken state" on real hardware.
Comment 3 guimarcalsilva 2023-08-07 22:01:15 UTC
I just tested X11 and Wayland on real hardware on Live mode and I can absolutely reproduce the "semi-broken" compositing on X11 after it boots. If I run 'plasmashell --replace', transparencies, applet corners and the 1px line disappear and everything looks fine. I also rebooted and tried a fresh Wayland session and there's no bug there, so this is specific to X11 and can be worked around by reloading plasmashell after every boot.
Comment 4 guimarcalsilva 2023-08-07 23:33:41 UTC
Created attachment 160816 [details]
Log from broken x11 session

This is the journalctl log from a live session where X11 started in a broken state (no transparencies, broken corners, 1px line on applets, though compositing was enabled). I then reloaded with 'plasmashell --replace' which fixes the issues and gathered this log. I'm not sure if this contains any useful information but I hope it does. Ps: I couldn't generate a shorter log with --user because that didn't work on a live session
Comment 5 guimarcalsilva 2023-08-13 19:49:06 UTC
Since the visual artifacts probably have to do with compositing I'm changing the product to Kwin
Comment 6 Nate Graham 2023-09-06 20:27:38 UTC
Is this still happening in the X11 session today, a month later?
Comment 7 guimarcalsilva 2023-09-06 21:01:39 UTC
(In reply to Nate Graham from comment #6)
> Is this still happening in the X11 session today, a month later?

Unfortunately, it's still happening both on a Live session (the last Neon ISO is dated August 26th), and on a VM with the latest updates as of today. I wonder if this is specific to QT 6.6, which Neon ships.
Comment 8 guimarcalsilva 2023-09-06 21:39:43 UTC
(In reply to guimarcalsilva from comment #7)
> (In reply to Nate Graham from comment #6)
> > Is this still happening in the X11 session today, a month later?
> 
> Unfortunately, it's still happening both on a Live session (the last Neon
> ISO is dated August 26th), and on a VM with the latest updates as of today.
> I wonder if this is specific to QT 6.6, which Neon ships.

I have just tested KaOS which ships with QT 6.5.2 and the problem is still there, so Qt 6.6 is not the cause of this bug on X11. :/
Comment 9 Bug Janitor Service 2023-10-05 11:30:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/904
Comment 10 Vlad Zahorodnii 2023-10-05 11:37:53 UTC
Git commit a3971a6ece5f97875360d41534b9189b2193e2ea by Vlad Zahorodnii.
Committed on 05/10/2023 at 13:36.
Pushed by vladz into branch 'master'.

Remove opaque selector when compositing is turned back on again

M  +5    -1    src/plasma/private/theme_p.cpp

https://invent.kde.org/frameworks/plasma-framework/-/commit/a3971a6ece5f97875360d41534b9189b2193e2ea