Remove opaque selector when compositing is turned back on again

BUG: 473060